# Macros-Script

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTROLLER_DEBUG_INSTRUCTIONS.txt  CONTROLLER_FIXES_SUMMARY.txt  CONTROLLER_FLOW_DIAGRAM.txt  Macros.ahk  Macros_v2.ahk  README.md  TESTING.md  UI_PATTERNS.md  macros.ini  macros.ini.bak  profiles.ini
.claude/agents/: macros-script-analyzer.md
Lib/: Debug.ahk  MacroGui.ahk  Profiles.ahk  Recorder_Keys.ahk  ScriptSingleton.ahk  Slots.ahk  TrayMenu.ahk  VJoy_lib.ahk  XInput.ahk
Lib_v2/: Debug.ahk  MacroGui.ahk  Profiles.ahk  Recorder_Keys.ahk  ScriptSingleton.ahk  Slots.ahk  TrayMenu.ahk  VJoy_lib.ahk  XInput.ahk
MacrosApp/MacrosApp/: HotkeyManager.cs  KeyCaptureDialog.cs  KeyboardToggleBinding.cs  MacrosApp.csproj  MainForm.Designer.cs  MainForm.cs  NativeEngine.cs  ProfileManager.cs  Program.cs  RecordingInputHook.cs  SlotManager.cs  VirtualXboxOutput.cs  WindowsInput.cs
MacrosApp/MacrosApp/Controls/: ControllerStatePanel.cs  SlotListControl.cs
MacrosApp/MacrosApp/Models/: GameProfile.cs  MacroSettings.cs  MacroSlot.cs
MacrosApp/tools/: Validate-Tooltips.ps1
MacrosApp/tools/MacrosApp.Smoke/: MacrosApp.Smoke.csproj  Program.cs
MacrosEngine/: CMakeLists.txt
MacrosEngine/include/: macros_engine.h
MacrosEngine/src/: engine.c  event_format.c  event_player.c  event_recorder.c  timing.c  timing.h  vjoy_output.c  xinput_diff.h  xinput_poller.c
MacrosEngine/test/: test_engine.c  test_xinput_diff.c
MacrosEngine/test/fixtures/: ahk_v1_mixed.txt
Plans/: native-controller-dll.md  native-engine-stretch.md  v2-port-completion.md
Plans/Completed/: native-controller-dll.md  native-engine-stretch.md  v2-port-completion.md
macros_events/: Delete Grok Files (HP monitor 1920x1080, drag files window all the way to the right so it's fullscreened).txt  [FAST] Delete Grok Files (HP monitor 1920x1080).txt  test.txt  y.txt
